Actualiza la configuración CORS para incluir un nuevo origen y permite el método PATCH en las solicitudes